# fnaf-browser-game

./: README.md  docker-compose.yml  freeroam3d.js  game.js  index.html  style.css
backend/: .env.example  Cargo.toml
backend/migrations/: 001_initial_schema.sql
backend/src/: error.rs  lib.rs  main.rs
backend/src/config/: mod.rs
backend/src/db/: mod.rs
backend/src/middleware/: auth.rs
backend/src/models/: achievement.rs  challenge.rs  game_session.rs  leaderboard.rs  mod.rs  multiplayer.rs  user.rs
backend/src/routes/: achievements.rs  auth.rs  challenges.rs  leaderboard.rs  mod.rs  multiplayer.rs  users.rs
backend/src/services/: auth_service.rs  challenge_service.rs  leaderboard_service.rs  mod.rs
backend/src/websocket/: mod.rs
frontend/: package.json  tsconfig.json  vite.config.ts
frontend/public/: index.html
frontend/src/: main.ts
frontend/src/api/: ApiClient.ts
frontend/src/core/: EventBus.ts
frontend/src/features/achievements/: AchievementData.ts  AchievementManager.ts
frontend/src/features/audio/: SoundEffects.ts
frontend/src/features/modes/: EasyMode.ts  SecretNights.ts
frontend/src/features/rating/: StarRating.ts
frontend/src/freeroam/: Collectibles.ts
frontend/src/types/: api.types.ts  index.ts
frontend/src/utils/: storage.ts
